--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,13 @@
             <artifactId>xunfei-spark4j</artifactId>
             <version>1.1.2</version>
         </dependency>
+
+        <!-- redisson       -->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.21.3</version>
+        </dependency>
     </dependencies>
 
     <build>
